# vllm-studio

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHAT_UI_SCOPE.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LOOP_CHANGES.md  MIGRATION.md  QUICK_START.md  README.md  STATUS.md  deepseekcontext.md  docker-compose.yml  flaws.md  map.md  opencode.json  package.json  plan.md  proposal.md  pyproject.toml  release.config.cjs  start.sh
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.ralph/: context-log.md  failures.md  guardrails.md  progress.md  state.md
cli/: .depcheckrc.json  .jscpd.json  AGENTS.md  CLI_REFERENCE.md  eslint.config.mjs  knip.ts  package.json  tsconfig.json
config/: litellm.yaml  prometheus.yml  tool_call_handler.py
controller/: .jscpd.json  README.md  __init__.py  app.py  backends.py  browser.py  config.py  eslint.config.mjs  events.py  gpu.py  knip.ts  metrics.py  models.py  package.json  process.py  store.py  thinking_config.py
controller-new/: eslint.config.mjs  package.json
desktop/: README.md  daemon-start.sh  daemon-status.sh  daemon-stop.sh
docs/: ARCHITECTURE.md  DYNAMIC_THINKING_TOKENS.md  EXA_SETUP.md  GLM-47-OUTPUT-CORRUPTION-ANALYSIS.md  INTELLECT_3_FIX.md  MINIMAX_THINKING_FIX.md  PLAIN_ENGLISH_EXPLANATION.md  QUICK_REFERENCE.md  README.md  RECIPE_SYSTEM.md  RELIABILITY_IMPROVEMENT_PLAN.md  THINKING_TOKENS_ANSWER.md  VISUAL_GUIDE.md  VLLM_THINKING_TOKENS_GUIDE.md  architecture.md  data.md  desktop-electron.md  engine-refactor-plan.md  environment.md  getting-started.md  improve.md  scope.md  (+7 more)
(+1373 files in other folders)
